# cpp-ci-example

./: CMakeLists.txt  Makefile  main.cpp  sequential_cholesky.h  test_sequential_cholesky.cpp
.github/workflows/: ci.yml
cmake/: AddGitSubmodule.cmake  Docs.cmake
src/: CMakeLists.txt  sequential_cholesky.cpp
test/: CMakeLists.txt
